# ClockedIn.rs

./: Cargo.toml
src/: bin.rs  clockedin_service.rs  delta_hours.rs  lib.rs  long_term_registry.rs  time.rs  work_days.rs  work_journey.rs  work_week.rs
src/lib/: lib.rs  long_term_registry.rs  work_days.rs  work_week.rs
