[package]
name = "clockedin_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "clockedin_utils"
path = "src/lib.rs"

[[bin]]
name = "clockedin"
path = "src/bin.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
